Correct the alignment of images and text in the info card sections

--- a/style.css
+++ b/style.css
@@ -99,10 +99,16 @@ ul {
 .info-card {
     padding: 20px;
     max-width: 10em;
-    text-align: center;
+   
 
 }
 
+.info-notes {
+    text-align: center;
+    
+    display: flex;
+    flex-direction: column;
+}
 .quote-segment {
     background-color: #e5e7eb;
    
